# retail-analytics

./: .env.example  .gitignore  Data & Reporting Analyst Portfolio Project.md  Home.py  INSIGHTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
data/processed/: orders_clean.csv
notebooks/: 01_eda.ipynb
pages/: 1_Executive_Overview.py  2_Product_Analysis.py  3_Regional_Performance.py  4_Time_Series.py
sql/: __init__.py  clean_data.py  schema.sql  seed_data.py
sql/queries/: q01_top_products.sql  q02_regional_sales.sql  q03_yoy_growth.sql  q04_best_month_by_category.sql  q05_subcategory_profit_growth.sql  q06_segment_analysis.sql  q07_state_profit_margins.sql  q08_discount_impact.sql  q09_shipping_performance.sql  q10_category_trends.sql
tests/: __init__.py  test_clean_data.py  test_database.py  test_seed_data.py
utils/: __init__.py  database.py
